Fix UserMapper bean injection with MapStruct