@@ -1,24 +1,24 @@
 package ru.kata.spring.boot_security.demo.controller;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
-import org.springframework.security.web.context.SecurityContextRepository;
 import org.springframework.web.bind.annotation.*;
 import ru.kata.spring.boot_security.demo.model.LoginRequest;
-import ru.kata.spring.boot_security.demo.model.User;
-import ru.kata.spring.boot_security.demo.servis.UserService;
+
+
 
 import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+
 import java.util.Map;
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
@@ -47,14 +47,14 @@ public class AuthController {
                     SecurityContextHolder.getContext()
             );
 
-            User principal = (User) auth.getPrincipal();
+            UserDetails principal = (UserDetails) auth.getPrincipal();
 
             return ResponseEntity.ok(Map.of(
                     "username", principal.getUsername(),
                     "roles", auth.getAuthorities()
                             .stream()
                             .map(GrantedAuthority::getAuthority)
-                            .toList()
+                            .collect(Collectors.toList())
             ));
 
         } catch (BadCredentialsException e) {
